# nog

./: .gitignore  README.md  main.py  pyproject.toml
cli/: main.py
cli/parsers/: template.py
src/nog/: _version.py
src/nog/aoc/: client.py  errors.py  inputs.py
src/nog/auth/: browser_login.py  dev_login.py  errors.py  playwright_dev.py  session.py
src/nog/cli/: main.py
src/nog/cli/commands/: auth.py  template.py
src/nog/cli/parsers/: auth.py  template.py
src/nog/storage/: input_cache.py
tests/aoc/: test_client.py  test_inputs.py
tests/auth/: test_session.py
tests/cli/: test_auth_login.py  test_template.py
tests/storage/: test_input_cache.py
